feat: add copy feature

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -3,5 +3,6 @@
     "openai_chat_options": {
         "model": "gpt-3.5-turbo",
         "temperature": "0.2"
-    }
+    },
+    "auto_copy": "open"
 }
