--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-command",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "ai command",
   "main": "dist/index.js",
   "bin": {
@@ -35,6 +35,7 @@
     "cac": "^6.7.14",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.1",
+    "clipboardy": "^2.3.0",
     "debug": "^4.3.1",
     "execa": "^5.0.0",
     "glob": "^10.2.3",
