--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-command",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "ai command",
   "main": "dist/index.js",
   "bin": {
@@ -21,7 +21,8 @@
     "chatgpt",
     "openai",
     "command",
-    "terminal"
+    "terminal",
+    "ai chat"
   ],
   "scripts": {
     "dev": "npm run build-fast -- --watch",
@@ -37,13 +38,16 @@
     "chokidar": "^3.5.1",
     "clipboardy": "^2.3.0",
     "debug": "^4.3.1",
+    "dotenv": "^16.3.1",
     "execa": "^5.0.0",
     "glob": "^10.2.3",
     "globby": "^11.0.3",
+    "inquirer": "^8.2.6",
     "joycon": "^3.0.1",
     "marked": "^4.3.0",
     "marked-terminal": "^5.2.0",
     "openai": "^3.2.1",
+    "ora": "^5.1.0",
     "resolve-from": "^5.0.0",
     "tree-kill": "^1.2.2"
   },
@@ -51,6 +55,7 @@
     "@types/debug": "4.1.7",
     "@types/flat": "5.0.2",
     "@types/fs-extra": "9.0.13",
+    "@types/inquirer": "^9.0.3",
     "@types/marked": "^4.3.1",
     "@types/marked-terminal": "^3.1.3",
     "@types/node": "14.18.12",
